RESOLVED FIXED241070
[LFC][FFC] Compute available space when ConstraintsForFlexContent does not provide one
https://bugs.webkit.org/show_bug.cgi?id=241070
Summary [LFC][FFC] Compute available space when ConstraintsForFlexContent does not pr...
alan
Reported 2022-05-28 17:10:30 PDT
e.g. when the flex box does not have fixed height
Attachments
[fast-cq]Patch (11.68 KB, patch)
2022-05-28 17:13 PDT, alan
no flags
alan
Comment 1 2022-05-28 17:13:31 PDT
Created attachment 459829 [details] [fast-cq]Patch
EWS
Comment 2 2022-05-29 07:03:56 PDT
Committed r295015 (251110@main): <https://commits.webkit.org/251110@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 459829 [details].
Radar WebKit Bug Importer
Comment 3 2022-05-29 07:04:12 PDT
Note You need to log in before you can comment on or make changes to this bug.