Compute available space when ConstraintsForFlexContent does not provide one https://bugs.webkit.org/show_bug.cgi?id=241070

Reviewed by Antti Koivisto.

e.g. if the flex box does not have fixed height in the cross axis direction, all flex items become as tall as the tallest flex item.

* Source/WebCore/layout/formattingContexts/flex/FlexFormattingContext.cpp:
(WebCore::Layout::FlexFormattingContext::computeAvailableLogicalVerticalSpace const):
(WebCore::Layout::FlexFormattingContext::computeAvailableLogicalHorizontalSpace const):
(WebCore::Layout::FlexFormattingContext::computeLogicalWidthForFlexItems):
(WebCore::Layout::FlexFormattingContext::computeLogicalHeightForFlexItems):
(WebCore::Layout::FlexFormattingContext::alignFlexItems):
(WebCore::Layout::FlexFormattingContext::layoutInFlowContentForIntegration):
(WebCore::Layout::availableLogicalVerticalSpace): Deleted.
(WebCore::Layout::availableLogicalHorizontalSpace): Deleted.
* Source/WebCore/layout/formattingContexts/flex/FlexFormattingContext.h:

Canonical link: https://commits.webkit.org/251110@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295015 268f45cc-cd09-0410-ab3c-d52691b4dbfc